2004-01-12 Andy Ruder <aeruder at ksu dot edu>
 * Manually applying various attributes to NSTextView subclasses
   since OS X doesn't support custom subclasses on them.
 * Added the emoticon bundle (thanks ludovic)
 * Fixed a memory leak in bundle setup
 * Fixed a weirdness on selection in bundle setup

2004-01-11 Andy Ruder <aeruder at ksu dot edu>
 * Added /ping, /topic to GNUstepOutput
 * Made /join not require the # on the channels
 * DCCSupport (finally) has support for using a specific range of ports and
   setting the block size.  A GNUstepOutput preferences panel was added.

2004-01-10 Andy Ruder <aeruder at ksu dot edu>
 * Bundle Controller had a bug when dragging to bottom row
 * GNUstepOutput will make sure bundle prefs are closed when they are unloaded
 * Worked on making TS compilable on OSX 

2004-01-05 Andy Ruder <aeruder at ksu dot edu>
 * Updated the server list
 * Made the server list realphabetize on startup
 * Moved defaults into external files and into separate bundles
 * Made Highlighting not screw up the preferences button in bundle setup

2003-12-30 Andy Ruder <aeruder at ksu dot edu>
 * Added the ability for bundles to register preferences with 
   GNUstepOutputBundle
 * Redid Bundle Configurator to use drag'n'drop
 * Finished Highlighting's preferences

2003-12-21 Andy Ruder <aeruder at ksu dot edu>
 * OFTC made it into the server list
 * made a change to the topic inspector that will hopefully make it
   look good on OSX

2003-12-19 Andy Ruder <aeruder at ksu dot edu>
 * Made /dcc a little more sane on the syntax.
 * Fixed some early deallocation bugs in delegate messages
 * fixed user list weirdness
 * fixed a server list bug when editing two different things

2003-12-17 Andy Ruder <aeruder at ksu dot edu>
 * Finished all .nibs, got Server list working as well as all the other
   things working on the OSX port.
 * Slightly modified bundle loading to search for bundles in the .app resource