@@ -61,9 +61,6 @@
 //{
 //	[inputController lineTyped: @"/close"];
 //}
-- (void)windowWillClose: (NSNotification *)aNotification
-{
-}
 @end
 
 
