@@ -1,3 +1,7 @@
+2005-06-01 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: Topic inspector did not correctly update
+ when someone else applied a new topic.
+
 2004-01-12 Andy Ruder <aeruder at ksu dot edu>
  * Manually applying various attributes to NSTextView subclasses
    since OS X doesn't support custom subclasses on them.
